# VulkanLearning

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE Brendan  LICENSE.md  README.md
3D_1/: CMakeLists.txt  phm_app.cpp  phm_model.cpp  phm_model.h  phm_object.h  phm_pipeline.h  phm_renderer.cpp  simple_render_system.cpp  simple_render_system.h  time.cpp
3D_1/shaders/: simple_shader.frag.spv  simple_shader.vert.spv
3D_2_perspective/: CMakeLists.txt  phm_app.cpp  phm_camera.cpp  phm_camera.h  phm_model.cpp  phm_model.h  phm_pipeline.cpp  phm_window.cpp  simple_render_system.cpp  simple_render_system.h  time.h
3D_2_perspective/shaders/: simple_shader.vert
3D_3_input/: CMakeLists.txt  phm_app.cpp  phm_app.h  phm_camera.cpp  phm_camera.h  phm_device.cpp  phm_keyboardController.cpp  phm_keyboardController.h  phm_object.h  phm_swapchain.cpp  phm_window.cpp  simple_render_system.cpp  time.cpp  time.h
3D_3_input/shaders/: simple_shader.frag
3D_4_index_buffers/: CMakeLists.txt  phm_camera.cpp  phm_keyboardController.cpp  phm_keyboardController.h  phm_model.cpp  simple_render_system.cpp  simple_render_system.h
3D_4_index_buffers/shaders/: simple_shader.frag  simple_shader.vert
3D_5_directional_vertex_light/: CMakeLists.txt  pch.h  phm_app.cpp  phm_app.h  phm_model.cpp  phm_model.h  phm_object.h  phm_pipeline.cpp  phm_pipeline.h  phm_window.cpp  simple_render_system.cpp
3D_5_directional_vertex_light/shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
3D_6_uniform/: CMakeLists.txt  phm_app.cpp  phm_buffer.h  phm_descriptor.h  phm_device.cpp  phm_frame_info.h  phm_renderer.h  phm_swapchain.h  phm_utils.h  phm_window.h  simple_render_system.cpp
3D_6_uniform/shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
3D_7_point_light/: CMakeLists.txt  phm_app.cpp  phm_app.h  phm_descriptor.cpp  phm_descriptor.h  phm_renderer.cpp  simple_render_system.h
3D_7_point_light/shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
3D_8_billboards/: CMakeLists.txt  phm_app.cpp  phm_app.h  phm_descriptor.cpp  phm_descriptor.h  phm_device.cpp  phm_keyboardController.cpp  phm_model.cpp  phm_model.h  phm_object.cpp  phm_pipeline.cpp  phm_pipeline.h  phm_window.cpp  point_light_system.cpp  simple_render_system.h
3D_8_billboards/shaders/: point_light.frag  point_light.frag.spv  point_light.vert  simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
3D_9_specular_lighting/: CMakeLists.txt  phm_app.cpp  phm_app.h  phm_buffer.cpp  phm_buffer.h  phm_camera.cpp  phm_camera.h  phm_component.h  phm_descriptor.cpp  phm_device.h  phm_entity.cpp  phm_entity.h  phm_frame_info.h  phm_functionComponent.h  phm_keyboardController.cpp  phm_keyboardController.h  phm_manager.cpp  phm_manager.h  phm_model.cpp  phm_model.h  phm_pipeline.cpp  phm_pointLightComponent.h  phm_renderer.h  phm_swapchain.cpp  phm_swapchain.h  phm_transform.cpp  phm_transform.h  phm_window.cpp  phm_window.h  point_light_system.cpp  point_light_system.h  simple_render_system.cpp  simple_render_system.h  time.cpp  time.h
3D_9_specular_lighting/shaders/: point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
CheckSupport/: CMakeLists.txt  main.cpp
Showcase_1_projection_showcase/: 3D.cpp  CMakeLists.txt  README.txt  frustum_render_system.cpp  frustum_render_system.h  pch.h  phm_app.cpp  phm_app.h  phm_buffer.cpp  phm_camera.cpp  phm_descriptor.cpp  phm_descriptor.h  phm_device.cpp  phm_frame_info.h  phm_keyboardController.cpp  phm_keyboardController.h  phm_model.cpp  phm_model.h  phm_object.h  phm_pipeline.h  phm_renderer.cpp  phm_swapchain.cpp  phm_window.cpp  point_light_system.cpp  point_light_system.h  time.cpp
Showcase_1_projection_showcase/shaders/: frustum_shader.frag  frustum_shader.frag.spv  frustum_shader.vert  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert.spv
Triangle/: CMakeLists.txt  Triangle.cpp  phm_app.cpp  phm_app.h  phm_device.cpp  phm_device.h  phm_model.cpp  phm_model.h  phm_pipeline.cpp  phm_pipeline.h  phm_swapchain.cpp  phm_swapchain.h  phm_window.cpp  phm_window.h
Triangle/shaders/: simple_shader.frag  simple_shader.vert
Triangle_1/: CMakeLists.txt  Triangle.cpp  phm_app.cpp  phm_app.h  phm_device.cpp  phm_device.h  phm_swapchain.cpp  phm_window.cpp
Triangle_1/shaders/: simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
Triangle_2_pushconstants/: CMakeLists.txt  phm_app.cpp  phm_app.h  phm_device.h  phm_model.cpp  phm_model.h  phm_object.h  phm_swapchain.cpp  phm_swapchain.h
Triangle_2_pushconstants/shaders/: simple_shader.vert.spv
Triangle_3_restructured/: CMakeLists.txt  phm_app.cpp  phm_app.h  phm_device.cpp  phm_model.cpp  phm_object.h  phm_window.cpp  simple_render_system.cpp  simple_render_system.h
Triangle_3_restructured/shaders/: simple_shader.frag.spv  simple_shader.vert
Triangle_4_homogeneous/: CMakeLists.txt  phm_app.cpp  phm_app.h  phm_device.cpp  phm_model.cpp  phm_model.h  phm_object.h  phm_renderer.cpp  phm_renderer.h  phm_swapchain.cpp  phm_window.h  simple_render_system.cpp  simple_render_system.h
Triangle_4_homogeneous/shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
Triangle_w_pushconstants/: CMakeLists.txt  phm_app.cpp  phm_app.h  phm_device.cpp  phm_model.cpp  phm_object.h  phm_swapchain.cpp  phm_swapchain.h
Triangle_w_pushconstants/shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
